Created page for freezer; add bold front for cities

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 		<div class="container" >
 			<div class="main_empty"></div>
 			<div class="main-form">
-				<form id="main-form" action="#">
+				<form id="main-form" action="#" name="main-form" method="post" action="">
 					<h2 class="title main-form_title">Book a service</h2>
 					<div class="form_item">
 						<input class="main-form_input" type="text" placeholder="Full Name">
@@ -66,7 +66,7 @@
 							<div class="services_img"><img src="@img/service/service-others.png" alt="Freezer"></div>
 							<div class="services_text">Much like the refrigerator, the freezer helps extend your food’s shelf life. This benefits your health, helps you save money, and provides you with overall comfort. The best thing about a freezer is that the food stays even longer than if it were in the refrigerator. But what happens when the freezer breaks down, and your food starts to rot? </div>
 							<div class="services_text">If your freezer isn’t working as it should, give us a call. Our appliance repair technician will do freezer repair services to ensure it continues running efficiently.</div>
-							<div class="services_button"><a class="button" href="refrigerator.html">read more</a></div>
+							<div class="services_button"><a class="button" href="page-freezer.html">read more</a></div>
 <div class="line line_short"></div>
 					</div>
 					<div class="grid-hiderows services_item">
@@ -182,7 +182,7 @@
 							<span>Much like the refrigerator, the freezer helps extend your food’s shelf life. This benefits your health, helps you save money, and provides you with overall comfort. The best thing about a freezer is that the food stays even longer than if it were in the refrigerator. But what happens when the freezer breaks down, and your food starts to rot?</span> 
 							<span>If your freezer isn’t working as it should, give us a call. Our appliance repair technician will do freezer repair services to ensure it continues running efficiently.</span>
 						</div>
-						<div class="services_button_2"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button_2"><a class="button" href="page-freezer.html">read more</a></div>
 						<div class="line_2"><div class="line"></div></div> 
 					</div>
 					<div class="services_item_2">
@@ -197,7 +197,7 @@
 							<span>A dishwasher is another essential appliance around the house. Everyone loves having clean dishes, so things can go into disarray if the dishwasher breaks down. If your dishwasher isn’t working well, contact YOTA HVAC & Appliance Repair service today to have our team of qualified home appliance repair professionals look into it. </span> 
 							<span>Alternatively, if you want to ensure your dishwasher serves you longer, our technicians can service it for you to check for any potential dishwasher repair issues and stop them before they happen.</span>
 						</div>
-						<div class="services_button_2"><a class="button" href="refrigerator.html">read more</a></div>
+						<div class="services_button_2"><a class="button" href="page-dishwasher.html">read more</a></div>
 						<div class="line_2"><div class="line"></div></div> 
 					</div>
 					<div class="services_item_2">						
