--- a/src/spring.html
+++ b/src/spring.html
@@ -4,7 +4,7 @@
 	<section class="areas-promo">
 		<div class="container">
 			<div class="areas-promo_wrapper">
-				<h2 class="title">Appliance Repair Services in <span> Spring </span> </h2>
+				<h2 class="title">Appliance Repair Services in <span id="city">Spring</span> </h2>
 				<div class="form">
 					<form id="form-areas" action="#">
 						<div class="form_title">Book a service</div>
