Added privacy policy; change images

--- a/src/book-a-service.html
+++ b/src/book-a-service.html
@@ -36,10 +36,9 @@
 				<div class="form_item">
 					<textarea class="form_input" placeholder="Please let us know if you have any special requests"></textarea>
 				</div>
-				<a class="privacy" href="https://bigcityhomeservice.com/privacy-policy">Data protected and privacy</a>
+				<a class="privacy" href="privacy-policy.html">Data protected and privacy</a>
 				<button type="submit" class="button">schedule a service</button>
 				</div>
-				<div class="line"></div>
 			</div>
 		</section>
 		<div class="overlay">
