--- a/src/index.html
+++ b/src/index.html
@@ -367,7 +367,7 @@
 						<div class="contact_form_item">
 							<input type="text" name ="about" class="contact_form_input" placeholder="inquiry about">
 						</div>
-						<button class="contact_form_button" type="submit">submit</button>
+						<input id="contact_button" class="contact_form_button" type="submit">submit</input>
 					</form>
 				</div>
 			</div>
