Added mask for phone in forms; changed image for cities

--- a/src/html/areas.html
+++ b/src/html/areas.html
@@ -6,16 +6,16 @@
 		</div>
 		<div class="areas_list">
 			<ol>
-				<li class="areas_city"> <span>01</span> <a class="areas_city_link" href="spring.html">Spring</a> </li>
-				<li class="areas_city"> <span>02</span> <a class="areas_city_link" href="spring.html">Woodlands</a> </li>
-				<li class="areas_city"> <span>03</span> <a class="areas_city_link" href="spring.html">Humble</a> </li>
-				<li class="areas_city"> <span>04</span> <a class="areas_city_link" href="spring.html">Kingwood</a> </li>
-				<li class="areas_city"> <span>05</span> <a class="areas_city_link" href="spring.html">Conroe</a> </li>
-				<li class="areas_city"> <span>06</span> <a class="areas_city_link" href="spring.html">New Caney</a> </li>
-				<li class="areas_city"> <span>07</span> <a class="areas_city_link" href="spring.html">Klein</a> </li>
-				<li class="areas_city"> <span>08</span> <a class="areas_city_link" href="spring.html">Tomball</a> </li>
-				<li class="areas_city"> <span>09</span> <a class="areas_city_link" href="spring.html">Cypress</a> </li>
-				<li class="areas_city"> <span>10</span> <a class="areas_city_link" href="spring.html">Egypt</a> </li>
+				<li class="areas_city"> <span>01</span> <a class="areas_city_link" href="page-area-spring.html">Spring</a> </li>
+				<li class="areas_city"> <span>02</span> <a class="areas_city_link" href="page-area-woodlands.html">Woodlands</a> </li>
+				<li class="areas_city"> <span>03</span> <a class="areas_city_link" href="page-area-humble.html">Humble</a> </li>
+				<li class="areas_city"> <span>04</span> <a class="areas_city_link" href="page-area-kingwood.html">Kingwood</a> </li>
+				<li class="areas_city"> <span>05</span> <a class="areas_city_link" href="page-area-conroe.html">Conroe</a> </li>
+				<li class="areas_city"> <span>06</span> <a class="areas_city_link" href="page-area-new-caney.html">New Caney</a> </li>
+				<li class="areas_city"> <span>07</span> <a class="areas_city_link" href="page-area-klein.html">Klein</a> </li>
+				<li class="areas_city"> <span>08</span> <a class="areas_city_link" href="page-area-tomball.html">Tomball</a> </li>
+				<li class="areas_city"> <span>09</span> <a class="areas_city_link" href="page-area-cypress.html">Cypress</a> </li>
+				<li class="areas_city"> <span>10</span> <a class="areas_city_link" href="page-area-egypt.html">Egypt</a> </li>
 			</ol>
 			<div class="line"></div>
 		</div>
