--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 						<input class="main-form_input" type="email" placeholder="email">
 					</div>
 					<div class="main-form_item">
-						<input class="main-form_input" type="tel" placeholder="phone">
+						<input id="phone" class="main-form_input" type="tel" placeholder="phone">
 					</div>
 					<div class="main-form_item">
 						<textarea class="main-form_input" placeholder="massage"></textarea>
@@ -362,7 +362,7 @@
 							<input required type="text" name ="email" class="contact_form_input" placeholder="email*">
 						</div>
 						<div class="contact_form_item">
-							<input required type="tel" name ="phone" class="contact_form_input" placeholder="phone*">
+							<input required id="phone" type="tel" name ="phone" class="contact_form_input" placeholder="phone*">
 						</div>
 						<div class="contact_form_item">
 							<input type="text" name ="about" class="contact_form_input" placeholder="inquiry about">
