--- a/src/page-trash-compactor.html
+++ b/src/page-trash-compactor.html
@@ -22,7 +22,7 @@ Need trash compactor repair service in San Diego County? YOTA HVAC & Appliance R
 						<input required type="text" name ="email" class="form_input" placeholder="email*">
 					</div>
 					<div class="form_item">
-						<input required type="tel" name ="phone" class="forTRASH COMPACTORm_input" placeholder="phone*">
+						<input required id="phone" type="tel" name ="phone" class="forTRASH COMPACTORm_input" placeholder="phone*">
 					</div>
 					<button class="button" type="submit">submit</button>
 				</form>
