--- a/src/book-a-service.html
+++ b/src/book-a-service.html
@@ -31,7 +31,7 @@
 					<input class="form_input" type="email" placeholder="email address">
 				</div>
 				<div class="form_item">
-					<input class="form_input" type="tel" placeholder="phone number">
+					<input id="phone" class="form_input" type="tel" placeholder="phone number">
 				</div>
 				<div class="form_item">
 					<textarea class="form_input" placeholder="Please let us know if you have any special requests"></textarea>
