--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -4,7 +4,7 @@
 		<div class="footer_wrapper">
 			<div class="footer_social">
 			<div class="logo">
-				<a href="https://www.yota.annakondr.su" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
+				<a href="https://www.yota.annakondr.su" class="logo_link"><img src="../img/logo.png" alt="logo"></a>
 			</div>
 			<a href="#" class="mail_link">info_yota@gmail.com</a>
 			<div class="footer_social_icons">
