--- a/src/html/header.html
+++ b/src/html/header.html
@@ -56,7 +56,7 @@
 			<div class="menu_item"><a href="https://www.yota.annakondr.su/#contacts" class="menu_link">contact us</a></div>
 		</div>
 		<div class="logo">
-			<a href="https://www.yota.annakondr.su" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
+			<a href="https://www.yota.annakondr.su" class="logo_link"><img src="../img/logo.png" alt="logo"></a>
 		</div>
 		<div class="header_menu">
 				<a href="https://www.yota.annakondr.su/#header" class="menu_link header_menu_link">home</a>
