--- a/src/page-oven.html
+++ b/src/page-oven.html
@@ -21,7 +21,7 @@ Due to their reliability and hardy nature, many oven owners neglect to maintain 
 						<input required type="text" name ="email" class="form_input" placeholder="email*">
 					</div>
 					<div class="form_item">
-						<input required type="tel" name ="phone" class="form_input" placeholder="phone*">
+						<input required id="phone" type="tel" name ="phone" class="form_input" placeholder="phone*">
 					</div>
 					<button class="button" type="submit">submit</button>
 				</form>
