--- a/src/page-stove.html
+++ b/src/page-stove.html
@@ -20,7 +20,7 @@
 						<input required type="text" name ="email" class="form_input" placeholder="email*">
 					</div>
 					<div class="form_item">
-						<input required type="tel" name ="phone" class="form_input" placeholder="phone*">
+						<input required id="phone" type="tel" name ="phone" class="form_input" placeholder="phone*">
 					</div>
 					<button class="button" type="submit">submit</button>
 				</form>
