--- a/src/html/header.html
+++ b/src/html/header.html
@@ -11,11 +11,11 @@
 				<div class="menu_close"><div></div></div>
 			</div>
 			<div class="menu_line"></div>
-			<div class="menu_item"><a href="https://www.yota.annakondr.su/#header" class="menu_link">home</a></div>
+			<div class="menu_item"><a href="#header" class="menu_link">home</a></div>
 			<div class="menu_line"></div>
 			<div class="menu_item_plus">
 				<div class="menu_item_name">
-					<a href="https://www.yota.annakondr.su/#services" class="menu_link">appliance repair services</a>
+					<a href="#services" class="menu_link">appliance repair services</a>
 					<img class="menu_item_img" src="/svgicons/arrow-down.svg" alt="arrow-down">
 				</div>
 				<ul class="menu_item_list menu_item_list_none">
@@ -32,11 +32,11 @@
 				</ul>
 			</div>
 			<div class="menu_line"></div>
-			<div class="menu_item"><a href="https://www.yota.annakondr.su/#about" class="menu_link">about us</a></div>
+			<div class="menu_item"><a href="#about" class="menu_link">about us</a></div>
 			<div class="menu_line"></div>
 			<div class="menu_item_plus">
 				<div class="menu_item_name">
-					<a href="https://www.yota.annakondr.su/#areas" class="menu_link">service areas</a>						
+					<a href="#areas" class="menu_link">service areas</a>						
 					<img class="menu_item_img" src="/svgicons/arrow-down.svg" alt="arrow-down">
 				</div>
 					<ul class="menu_item_list menu_item_list_none">
@@ -53,17 +53,17 @@
 					</ul>
 			</div>			
 			<div class="menu_line"></div>
-			<div class="menu_item"><a href="https://www.yota.annakondr.su/#contacts" class="menu_link">contact us</a></div>
+			<div class="menu_item"><a href="#contacts" class="menu_link">contact us</a></div>
 		</div>
 		<div class="logo">
-			<a href="https://www.yota.annakondr.su" class="logo_link"><img src="../img/logo.png" alt="logo"></a>
+			<a href="#" class="logo_link"><img src="../img/logo.png" alt="logo"></a>
 		</div>
 		<div class="header_menu">
-				<a href="https://www.yota.annakondr.su/#header" class="menu_link header_menu_link">home</a>
-				<a href="http://www.yota.annakondr.su/#services" class="menu_link header_menu_link">appliance repair services</a>
-				<a href="https://www.yota.annakondr.su/#about" class="menu_link header_menu_link">about us</a>
-				<a href="https://www.yota.annakondr.su/#areas" class="menu_link header_menu_link">service areas</a>									
-				<a href="https://www.yota.annakondr.su/#contacts" class="menu_link header_menu_link">contact us</a>
+				<a href="#header" class="menu_link header_menu_link">home</a>
+				<a href="#services" class="menu_link header_menu_link">appliance repair services</a>
+				<a href="#about" class="menu_link header_menu_link">about us</a>
+				<a href="#areas" class="menu_link header_menu_link">service areas</a>									
+				<a href="#contacts" class="menu_link header_menu_link">contact us</a>
 			<div class="header_contacts">
 				<img src="/svgicons/telephone.svg" alt="telephone">
 				<a href="tel:+16199883363" class="header_phone">(619) 988-3363</a>
